--- a/css/main.css
+++ b/css/main.css
@@ -134,12 +134,25 @@ ul {
 	list-style: none;
 
 	text-align: left;
+	font-size: 0.75rem;
+	line-height: 2rem;
 
 	color: #990033;
 }
 
+ul li {	
+	padding: 7px;
+
+	display: inline;
+
+	border: 1px solid #990033;
+	border-radius: 20px;
+	background-color: #ffcccc;
+
+}
+
 footer {
-	padding: 0 4% 5px 4%;
+	padding: 0 4% 4%;
 
 	font-size: 0.75rem;
 	color: gray;
